# DeliriX

./: CMakeLists.txt  DOM-dump.hpp  DOM-load.hpp  DOM-text.hpp  README.md  archive.hpp  compat.hpp  formats.hpp  text-API.hpp
src/: api.cpp  docx.cpp  dump-as-json.cpp  dump-as-tags.cpp  fb2.cpp  load-as-json.cpp  load-as-tags.cpp  odt.cpp  txt.cpp  xml.cpp  xml.hpp  zip.cpp
tests/: CMakeLists.txt  samples.cmake  test-base.cpp  test-docx.cpp  test-fb2.cpp  test-odt.cpp  test-text.cpp
tests/samples/: DeliriX.docx  DeliriX.odt  keva.odt  panov.fb2
